# kimi_tf_predict

./: .gitignore  CMakeLists.txt  main.cpp
data/: features.json
include/: feature_configure.h  fs_monitor.h  model_predict_service.h  tf_model.h  utils.h  xn_errno.h
python/: main.py
src/: feature_configure.cc  main.cpp  model_predict_service.cc  tf_model.cc  utils.cc
src/main/cpp/: feature_configure.cc  fs_monitor.cc  main.cc  model_manager.cc  model_predict_service.cc  predict_model.cc  tf_model.cc  utils.cc
src/main/cpp/include/: const.h  feature_configure.h  model_manager.h  model_predict_service.h  predict_model.h  tf_model.h  xn_errno.h
src/main/cpp/pb/: ml.pb.cc  ml.pb.h  tracking.pb.cc  tracking.pb.h
src/main/cpp/thrift/: ModelPredictService.cpp  ModelPredictService.h  ModelPredictService_server.skeleton.cpp  model_predict_constants.cpp  model_predict_constants.h  model_predict_types.cpp  model_predict_types.h  nx_adp_constants.cpp  nx_adp_constants.h  nx_adp_types.cpp  nx_adp_types.h
src/main/proto/: ml.proto  tracking.proto  xnad.proto
src/main/python/: main.py  package_monitor.py
src/main/python/pb/: ml_pb2.py
src/main/python/thrift/model_predict/: ModelPredictService-remote  ModelPredictService.py  __init__.py  ttypes.py
src/main/python/thrift/nx_adp/: ttypes.py
src/main/thrift/: model_predict.thrift  nx_adp.thrift
thrift/: model_predict.thrift
